03-RUN/service-mesh/demo/catalog/gitops/coolstore-catalog/apps/app-coolstore-catalog/services/coolstore-catalog/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  labels:
    app.openshift.io/runtime: spring-boot
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"catalog-database"}]'
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: https://github.com/adnan-drina/coolstore-catalog.git
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
        - name: catalog
          image: >-
            quay.io/adrina/coolstore-catalog:main-d1c69ccfdd8b21c1373cac6b511164d11cdec957
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      serviceAccountName: default
status: {}
