03-RUN/service-mesh/demo/catalog/gitops/coolstore-catalog/apps/app-coolstore-catalog/services/coolstore-catalog/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
spec:
  ports:
    - name: tcp-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: tcp-8443
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: tcp-8778
      port: 8778
      protocol: TCP
      targetPort: 8778
#    - name: metrics
#      port: 8080
#      protocol: TCP
#      targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
