03-RUN/service-mesh/demo/catalog/gitops/coolstore-catalog/apps/app-coolstore-catalog/services/coolstore-catalog/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: catalog
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: catalog
    weight: 100
  wildcardPolicy: None
